--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         
         <section class="input-section">
             <h2 class="section-title">Digite o nome dos seus amigos</h2>
+            <p class="section-p">Para adicionar mais de um amigo, separe os nomes por vírgulas. Ex:(Joao Vitor, Caroline)</p>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Digite um nome">
                 <button class="button-add" onclick="adicionarAmigo()">Adicionar</button>
@@ -35,7 +36,9 @@
             </div>
         </section>
     </main>
-
+    <footer class="rodape">
+        <p>Desenvolvido por João Vitor.</p>
+    </footer>
     <script src="app.js" defer></script>
 </body>
 </html>
